@@ -80,19 +80,19 @@ log_npc: 0
 // Log CHAT (Global, Whisper, Party, Guild, Main chat)
 // LOGGING FILTERS
 // =============================================================
-// 00 = Don't log at all
+// 0 = Don't log at all
+// 1 = Log EVERYTHING!
 // Advanced Filter Bits: ||
-// 01 - Log Global messages
-// 02 - Log Whisper messages
-// 04 - Log Party messages
-// 08 - Log Guild messages
-// 16 - Log Main chat messages
-// 32 - Don't log anything when WOE is on
+// 02 - Log Global messages
+// 04 - Log Whisper messages
+// 08 - Log Party messages
+// 16 - Log Guild messages
+// 32 - Log Main chat messages
+// 64 - Don't log anything when WOE is on
 // Example:
-// log_chat:  6 = logs both Whisper & Party messages
-// log_chat:  8 = logs only Guild messages
-// log_chat: 34 = logs only Whisper, when WOE is off
-// log_chat: 31 = logs EVERYTHING
+// log_chat: 12 = logs both Whisper & Party messages
+// log_chat: 16 = logs only Guild messages
+// log_chat: 68 = logs only Whisper, when WOE is off
 
 log_chat: 0
 
