@@ -1005,7 +1005,7 @@ int guild_send_message(struct map_session_data *sd,char *mes,int len)
 	guild_recv_message(sd->status.guild_id,sd->status.account_id,mes,len);
 
 	// Chat logging type 'G' / Guild Chat
-	if( log_config.chat&8 && !(agit_flag && log_config.chat&32) )
+	if( log_config.chat&1 || (log_config.chat&16 && !(agit_flag && log_config.chat&64)) )
 		log_chat("G", sd->status.guild_id, sd->status.char_id, sd->status.account_id, mapindex_id2name(sd->mapindex), sd->bl.x, sd->bl.y, NULL, mes);
 
 	return 0;
